# linthesia

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DASHBOARD.md  DEPLOY.md  Doxyfile  GEMINI.md  GPT.md  HANDOFF.md  IDEAS.md  MEMORY.md  Makefile  README.md  README_GTK_MIGRATION.md  README_submodules.md  ROADMAP.md  SUBMODULE_INVENTORY.md  TECHNICAL_OVERVIEW.md  TODO.md  VISION.md  branch_info.md  build_all.py  commit_message.txt  configure.ac  copilot-instructions.md  cross-emscripten.ini  fix_playingstate_waitmode.py  meson.build  plan.md  update_changelog.py  update_docs.sh  update_handoff.py  update_meson.py  update_src_meson.py  wait_mode_logic.py  (+5 more)
.github/workflows/: c-cpp.yml
.memory/: main.md
backend/: go.mod  main.go  main_test.go
backend-go/: ci_autofix.go  go.mod  main.go  shadow_pilot.go  submodule_status.go
docs/: ARCHITECTURE.md  CROSS_PLATFORM.md  PHASE_5_PROPOSAL.md
docs/modules/: AUDIO.md  GRAPHICS.md
extra/: com.github.linthesia.linthesia.gschema.xml  gschemas.compiled  meson.build
po/: LINGUAS  POTFILES  en_GB.po  fr.po  linthesia.pot
scripts/: health_check.py  search_api.py  workspace_index.db  workspace_indexer.py
src/: AICoPilot.cpp  AICoPilot.h  CompatibleSystem.cpp  DeviceTile.cpp  EnumTile.cpp  EnumTile.h  FileSelector.cpp  GameState.cpp  GameState.h  InputManager.cpp  InputManager.h  KeyMapper.cpp  KeyMapper.h  KeyboardDisplay.cpp  KeyboardDisplay.h  MainWindow.cpp  MainWindow.h  MidiComm.cpp  MidiComm.h  MidiDriver.h  OSGraphics.h  ParticleSystem.cpp  ParticleSystem.h  PlayingState.cpp  PlayingState.h  Renderer.cpp  Renderer.h  ScoreDB.cpp  ScoreDB.h  SettingsState.cpp  SettingsState.h  SharedState.h  SheetMusicDisplay.cpp  SheetMusicDisplay.h  SongLibState.cpp  SongLibState.h  SongTile.cpp  SongTile.h  StatsState.cpp  StatsState.h  (+12 more)
src/drivers/: AlsaMidiDriver.cpp  AlsaMidiDriver.h  CoreMidiDriver.cpp  CoreMidiDriver.h  FluidSynthMidiDriver.cpp  FluidSynthMidiDriver.h  MidiDriver.h  WebMidiDriver.cpp  WebMidiDriver.h  WinMMMidiDriver.cpp  WinMMMidiDriver.h
src/libmidi/: Midi.cpp  Midi.h  MidiEvent.cpp  MidiEvent.h  MidiUtil.h
tests/: audio_test.cpp  meson.build  test_libmidi.cpp  test_search_api.py
